[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/button/bg.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/button/bg_press.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/icon/repair.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/shop/armory-item/item.gd" type="Script" id=5]

[node name="armory_item" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -500.0
rect_min_size = Vector2( 0, 300 )
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 17.0
margin_right = -35.0
margin_bottom = -16.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 250.0
margin_bottom = 267.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2

[node name="icon" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 180.0
rect_min_size = Vector2( 150, 180 )
texture = ExtResource( 4 )
stretch_mode = 4

[node name="weapon_name" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 250.0
margin_bottom = 212.0
custom_fonts/font = ExtResource( 3 )
text = "Repair Airship"
align = 1

[node name="cost" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 250.0
margin_bottom = 244.0
custom_fonts/font = ExtResource( 3 )
text = "Cost : $250"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_left = 254.0
margin_right = 1007.0
margin_bottom = 267.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="btn_resupply" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_left = 1011.0
margin_top = 187.0
margin_right = 1311.0
margin_bottom = 267.0
rect_min_size = Vector2( 300, 80 )
size_flags_vertical = 8

[node name="btn_resupply" type="TextureButton" parent="Panel/HBoxContainer/btn_resupply"]
modulate = Color( 0.670588, 0.498039, 0.0392157, 1 )
margin_right = 300.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 50 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Panel/HBoxContainer/btn_resupply"]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "Resupply"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/HBoxContainer/btn_resupply/btn_resupply" to="." method="_on_btn_resupply_pressed"]
